fixed element spacing on dialogue page

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -5,7 +5,8 @@
 
 /* General elements style */
 
-html, body {
+html,
+body {
   overflow-x: hidden;
   overflow-y: hidden;
   position: relative;
@@ -685,7 +686,7 @@ code {
   color: rgb(248, 225, 203);
   font-weight: bold;
   font-size: 2.8em;
-  margin-bottom: 5%;
+  margin-bottom: 3%;
   margin-top: 6%;
   display: block;
 }
@@ -703,7 +704,7 @@ code {
   font-size: 1.5rem;
   text-align: center;
   color: rgb(248, 225, 203, 0.8);
-  margin: 1em 7em 3em 7em;
+  margin: 1em 7em 1em 7em;
   animation: fadeIn 2s;
   height: 2em;
   z-index: 4;
